--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -1,6 +1,9 @@
 
 name: Build and push docker image
-on: [push]
+on:
+  push:
+    branches:
+      - main
 jobs:
   Docker:
     runs-on: ubuntu-latest
